# Bookish

./: .gitignore  README.md  TODO.md  db.py  fast.py  logger_module.py  main.py  main.sh  pyproject.toml
api/: main.py
api/crud/: main.py
api/database/: init_db.py  main.py  models.py  schema.py  tables.py
api/endpoints/: book_route.py  user_cred.py
api/schemas/: login_schema.py  models.py
api/services/: auth.py  main.py  user_services.py
backend/: clients.py  dependencies.py  main.py  pyproject.toml  requirements.txt  test.py
backend/api/: main.py
backend/api/database/: init_db.py  tables.py
backend/api/endpoints/: book_route.py  user_route.py
backend/api/schemas/: book_schema.py
backend/api/services/: book_services.py  user_services.py
backend/module/: embeddings.py  search.py  test.py
backend/module/book_parser/: SeaStories.epub  base.py  main.py  parser_model.py
backend/module/rag/: main.py  qdrant.py
backend/module/rag/db/collection/demo_collection/: storage.sqlite
backend/tests/: test_epub_parser.py
backend/tests/stuff/test_books/: DG.epub  DG_IMG.epub  EE_IMG.epub
backend/tests/stuff/test_books/LP/: content.opf  cover.html  iTunesMetadata.plist  toc.ncx
backend/tests/stuff/test_books/LP/text/: part1.xhtml  part10.xhtml  part11.xhtml  part12.xhtml  part13.xhtml  part14.xhtml  part15.xhtml  part16.xhtml  (+21 more)
backend/utils/: logger_module.py
book_parser/: base.py  main.py
module/: api_handler.py  main.py  prompts.py  search.py
module/book_parser/: __init__.py  main.py  reader_new.py
static/1/: EE.epub
utils/: logger_module.py
(+21 files in other folders)
